--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </div>
 
               <div class="grid">
-           
+
                 <div class="grid-item webdev">
                   <div class="gallery-image">
                     <img src="./img/Screenshot 2023-10-14 092034.png" alt />
@@ -269,13 +269,13 @@
                       <div class="img-description">
                         <h3>Web Design</h3>
                         <h5><a target="_blank" style="color: black;"
-                          href="https://dans-ecommerce.netlify.app/"> View
-                          Demo</a></h5>
+                            href="https://dans-ecommerce.netlify.app/"> View
+                            Demo</a></h5>
                       </div>
                     </div>
                   </div>
                 </div>
-             
+
                 <div class="grid-item ui webdev">
                   <div class="gallery-image">
                     <img src="./img/Screenshot 2023-10-14 092446.png" alt />
@@ -284,8 +284,8 @@
                       <div class="img-description">
                         <h3>Web Design</h3>
                         <h5><a target="_blank" style="color: black;"
-                          href="https://maveltech.org/"> View
-                          Demo</a></h5>
+                            href="https://maveltech.org/"> View
+                            Demo</a></h5>
                       </div>
                     </div>
                   </div>
@@ -298,15 +298,15 @@
                       <div class="img-description">
                         <h3>Web Design</h3>
                         <h5><a target="_blank" style="color: black;"
-                          href="https://maturityglobal.com/"> View
-                          Demo</a></h5>
+                            href="https://maturityglobal.com/"> View
+                            Demo</a></h5>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="more-folio">
-                <a href="#" class="btn">More Folio</a>
+                <a href="/blog.html" target="_blank" class="btn">Blog</a>
               </div>
             </div>
           </div>
@@ -338,16 +338,35 @@
                   <div class="skill css">
                     <h3 class="skill-title">CSS</h3>
                     <div class="skill-bar">
-                      <div class="skill-progress" data-progress="70%"></div>
+                      <div class="skill-progress" data-progress="79%"></div>
                     </div>
                   </div>
                   <div class="skill js">
                     <h3 class="skill-title">JavaScript</h3>
                     <div class="skill-bar">
-                      <div class="skill-progress" data-progress="80%"></div>
+                      <div class="skill-progress" data-progress="76%"></div>
                     </div>
                   </div>
-                </div>
+                  <div class="skill Django">
+                    <h3 class="skill-title">Django</h3>
+                    <div class="skill-bar">
+                      <div class="skill-progress" data-progress="85%"></div>
+                    </div>
+                  </div>
+                  <div class="skill sql">
+                    <h3 class="skill-title">SQL</h3>
+                    <div class="skill-bar">
+                      <div class="skill-progress" data-progress="79%"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill python">
+                    <h3 class="skill-title">Python</h3>
+                    <div class="skill-bar">
+                      <div class="skill-progress" data-progress="82%"></div>
+                    </div>
+                  </div>
+                </div> <br> <br><br> <br>
                 <a href="#" class="btn">Read more</a>
               </div>
 
