--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#about">About</a>
                   </li>
                   <li>
-                    <a href="#testimonials">Testimonials</a>
+                    <a href="/blog.html">Blogs</a>
                   </li>
                   <li>
                     <a href="#contact">Contact</a>
@@ -320,13 +320,14 @@
 
             <div class="section-body grid-2">
               <div class="column-1">
-                <h3 class="title-sm">Hello, I'm</h3>
+                <h3 class="title-sm">Hello, I'm Abiodun Bello </h3>
                 <p class="text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Praesentium distinctio doloribus quam? Ut, laudantium a
-                  dolore,
-                  minima repudiandae iure iste molestiae exercitationem earum
-                  neque tempora?
+                  I am an IT professional with experience in software
+                  engineering, cybersecurity and data science. I have worked in
+                  various sectors such as education, government , multimedia and
+                  finance.
+                  My focus is to give customers good experience and outcomes
+                  always.
                 </p>
                 <div class="skills">
                   <div class="skill html">
@@ -367,12 +368,13 @@
                     </div>
                   </div>
                 </div> <br> <br><br> <br>
-                <a href="#" class="btn">Read more</a>
+                <a href="/blog.html" target="_blank" class="btn">Read more</a>
               </div>
 
               <div class="column-2 image">
                 <img src="./img/shapes/points4.png" class="points" alt />
-                <img src="./img/about.png" class="z-index" alt />
+                <img src="./img/portfolio/IMG-20230827-WA0075.png"
+                  class="z-index" alt />
               </div>
             </div>
           </div>
@@ -380,8 +382,6 @@
 
         <section class="records">
           <div class="overlay overlay-sm">
-            <img src="./img/shapes/square.png" alt class="shape square1" />
-            <img src="./img/shapes/square.png" alt class="shape square2" />
             <img src="./img/shapes/circle.png" alt class="shape circle" />
             <img
               src="./img/shapes/half-circle.png"
@@ -396,310 +396,79 @@
           <div class="container">
             <div class="wrap">
               <div class="record-circle">
-                <h2 class="number" data-num="235">0</h2>
+                <h2 class="number" data-num="5">0</h2>
                 <h4 class="sub-title">Projects</h4>
               </div>
             </div>
 
             <div class="wrap">
               <div class="record-circle active">
-                <h2 class="number" data-num="174">0</h2>
+                <h2 class="number" data-num="10">0</h2>
                 <h4 class="sub-title">Happy Clients</h4>
               </div>
             </div>
 
             <div class="wrap">
               <div class="record-circle">
-                <h2 class="number" data-num="892">0</h2>
+                <h2 class="number" data-num="292">0</h2>
                 <h4 class="sub-title">Work Hour</h4>
               </div>
             </div>
 
-            <div class="wrap">
+            <!-- <div class="wrap">
               <div class="record-circle">
-                <h2 class="number" data-num="368">0</h2>
-                <h4 class="sub-title">Awards</h4>
+                <h2 class="number" data-num="">0</h2>
+                <h4 class="sub-title">A</h4>
               </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="blog section">
-          <div class="container">
-            <div class="section-header">
-              <h3 class="title" data-title="Last News">My blog</h3>
-              <p class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo,
-                deserunt?
-              </p>
-            </div>
-
-            <div class="blog-wrapper">
-              <div class="blog-wrap">
-                <img
-                  src="./img/shapes/points3.png"
-                  alt
-                  class="points points-sq" />
-
-                <div class="blog-card">
-                  <div class="blog-image">
-                    <img src="./img/blog1.png" alt />
-                  </div>
-
-                  <div class="blog-content">
-                    <div class="blog-info">
-                      <h5 class="blog-date">March, 19 2020</h5>
-                      <h5 class="blog-user"><i class="fas fa-user"></i>Admin</h5>
-                    </div>
-                    <h3 class="title-sm">This is a short title</h3>
-                    <p class="blog-text">
-                      Lorem ipsum, dolor sit amet elit. rem poimus? Tempora
-                      expedita eos autem! Lorem ipsum, dolor sit met.
-                    </p>
-                    <a href="#" class="btn small">Read more</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="blog-wrap">
-                <div class="blog-card">
-                  <div class="blog-image">
-                    <img src="./img/blog2.png" alt />
-                  </div>
-
-                  <div class="blog-content">
-                    <div class="blog-info">
-                      <h5 class="blog-date">August, 02 2020</h5>
-                      <h5 class="blog-user"><i class="fas fa-user"></i>Admin</h5>
-                    </div>
-                    <h3 class="title-sm">This is a short title</h3>
-                    <p class="blog-text">
-                      Lorem ipsum, dolor sit amet elit. Sint atque culpa
-                      repellat
-                      sunt sit amet nobis! Lorem ipsum dolor sit amet.
-                    </p>
-                    <a href="#" class="btn small">Read more</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="blog-wrap">
-                <div class="blog-card">
-                  <div class="blog-image">
-                    <img src="./img/blog3.png" alt />
-                  </div>
-
-                  <div class="blog-content">
-                    <div class="blog-info">
-                      <h5 class="blog-date">December, 12 2020</h5>
-                      <h5 class="blog-user"><i class="fas fa-user"></i>Admin</h5>
-                    </div>
-                    <h3 class="title-sm">This is a short title</h3>
-                    <p class="blog-text">
-                      Lorem ipsum dolor sit, amet elit. enim numquam, laborum
-                      earum? Lorem ipsum dolor sit amet.
-                    </p>
-                    <a href="#" class="btn small">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="testimonials section" id="testimonials">
-          <div class="container">
-            <div class="section-header">
-              <h3 class="title" data-title="What People Say">Testimonials</h3>
-            </div>
-
-            <div class="testi-content grid-2">
-              <div class="column-1 reviews">
-                <div class="swiper-container">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide review">
-                      <i class="fas fa-quote-left quote"></i>
-                      <div class="rate">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-
-                      <p class="review-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        Laudantium adipisci veniam debitis quas, sapiente
-                        repellendus mollitia. Laboriosam labore voluptate quos?
-                      </p>
-
-                      <div class="review-info">
-                        <h3 class="review-name">Matias Butt</h3>
-                        <h5 class="review-job">Photographer, Paris</h5>
-                      </div>
-                    </div>
-
-                    <div class="swiper-slide review">
-                      <i class="fas fa-quote-left quote"></i>
-                      <div class="rate">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-
-                      <p class="review-text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit.
-                        Fugiat voluptate consequatur aut tenetur fugit error
-                        molestiae quaerat ex odio rem?
-                      </p>
-
-                      <div class="review-info">
-                        <h3 class="review-name">Romeo Herbert</h3>
-                        <h5 class="review-job">CEO, Munich</h5>
-                      </div>
-                    </div>
-
-                    <div class="swiper-slide review">
-                      <i class="fas fa-quote-left quote"></i>
-                      <div class="rate">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-
-                      <p class="review-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Cupiditate voluptatum enim nemo quod amet dolorum
-                        aliquam,
-                        sapiente omnis eaque consectetur.
-                      </p>
-
-                      <div class="review-info">
-                        <h3 class="review-name">Jack Costa</h3>
-                        <h5 class="review-job">Director of THR, London</h5>
-                      </div>
-                    </div>
-
-                    <div class="swiper-slide review">
-                      <i class="fas fa-quote-left quote"></i>
-                      <div class="rate">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                      </div>
-
-                      <p class="review-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit.
-                        Perspiciatis ab incidunt, dicta quam inventore ipsum
-                        dolor. Consectetur nam incidunt error!
-                      </p>
-
-                      <div class="review-info">
-                        <h3 class="review-name">Reiss Mccartney</h3>
-                        <h5 class="review-job">Engineer, San Francisco</h5>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="review-nav swiper-button-prev">
-                    <i class="fas fa-long-arrow-alt-left"></i>
-                  </div>
-                  <div class="review-nav swiper-button-next">
-                    <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="column-2 image">
-                <img src="./img/testi.png" alt class="img-element" />
-              </div>
-            </div>
+            </div> -->
           </div>
         </section>
 
         <section class="contact" id="contact">
-          <div class="container">
-            <div class="contact-box">
-              <div class="contact-info">
-                <h3 class="title">Get in touch</h3>
-                <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-                  rerum odio incidunt doslorum officia dolorem eaque aprim?
-                </p>
-                <div class="information-wrap">
-                  <div class="information">
-                    <div class="contact-icon">
-                      <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <p class="info-text">92 Cherry Drive Unimodale, NY 11553</p>
-                  </div>
 
-                  <div class="information">
-                    <div class="contact-icon">
-                      <i class="fas fa-paper-plane"></i>
-                    </div>
-                    <p class="info-text">lorem@ipsum.com</p>
-                  </div>
-
-                  <div class="information">
-                    <div class="contact-icon">
-                      <i class="fas fa-phone-alt"></i>
-                    </div>
-                    <p class="info-text">123-456-789</p>
-                  </div>
-                </div>
+          <center> <div class="contact-form">
+              <h3 class="title">Contact me</h3>
+              <div class="row">
+                <input
+                  type="text"
+                  class="contact-input"
+                  placeholder="First Name" />
+                <input
+                  type="text"
+                  class="contact-input"
+                  placeholder="Last Name" />
               </div>
 
-              <div class="contact-form">
-                <h3 class="title">Contact me</h3>
-                <div class="row">
-                  <input
-                    type="text"
-                    class="contact-input"
-                    placeholder="First Name" />
-                  <input
-                    type="text"
-                    class="contact-input"
-                    placeholder="Last Name" />
-                </div>
-
-                <div class="row">
-                  <input type="text" class="contact-input" placeholder="Phone" />
-                  <input type="email" class="contact-input" placeholder="Email" />
-                </div>
-
-                <div class="row">
-                  <textarea
-                    name="message"
-                    class="contact-input textarea"
-                    placeholder="Message"></textarea>
-                </div>
-                <a href="#" class="btn">Send</a>
+              <div class="row">
+                <input type="text" class="contact-input" placeholder="Phone" />
+                <input type="email" class="contact-input" placeholder="Email" />
               </div>
-            </div>
-          </div>
+
+              <div class="row">
+                <textarea
+                  name="message"
+                  class="contact-input textarea"
+                  placeholder="Message"></textarea>
+              </div>
+              <a href="#" class="btn">Send</a>
+            </div></center>
+
         </section>
 
         <section class="hireme" id="hireme">
           <div class="container">
-            <h3 class="title">Let's talk about a project</h3>
+            <h3 class="title">Do You Want to Work On A Project?</h3>
             <p class="text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
-              culpa. Commodi suscipit animi officia dignissimos unde, ipsum
-              fugiat
-              consequuntur, fugit ratione vel aperiam, similique distinctio
-              mollitia repellendus quasi rem vero!
+
+              <ul><b> Enhance your development and Analytic skills</b></ul>
+              <ul> Add a unique and creative project to your portfolio.</ul>
+              Be part of a supportive and collaborative community.
+              <ul></ul>
+              <b> Participate and potentially gain exposure for
+                your work.</b>
+              <ul></ul>
             </p>
-            <a href="#" class="btn">Hire me</a>
+            <a href="https://wa.me/2348032593879" class="btn">Hire me</a>
           </div>
         </section>
       </main>
@@ -710,8 +479,12 @@
             <div class="grid-4-col footer-about">
               <h3 class="title-sm">About</h3>
               <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                officiis quo officia quia?
+                <b><i>I am an IT professional with experience in software
+                    engineering, cybersecurity and data science. I have worked
+                    in various sectors such as education, government ,
+                    multimedia and finance.
+                    My focus is to give customers good experience and outcomes
+                    always.</i></b>
               </p>
             </div>
 
@@ -728,7 +501,7 @@
                   <a href="#about">About</a>
                 </li>
                 <li>
-                  <a href="#testimonials">Testimonials</a>
+                  <a href="/blog.html">Blog</a>
                 </li>
                 <li>
                   <a href="#contact">Contact</a>
@@ -746,9 +519,6 @@
                   <a href="#">Web Dev</a>
                 </li>
                 <li>
-                  <a href="#">App Design</a>
-                </li>
-                <li>
                   <a href="#">Marketing</a>
                 </li>
                 <li>
@@ -758,10 +528,8 @@
             </div>
 
             <div class="grid-4-col footer-newstletter">
-              <h3 class="title-sm">Subscribe</h3>
-              <p class="text">
-                Lorem ipsum dolor, sit amet ipsum dolor sit amet.
-              </p>
+              <h3 class="title-sm">Send us a message</h3>
+
               <div class="footer-input-wrap">
                 <input type="email" class="footer-input" placeholder="Email" />
                 <a href="#" class="input-arrow">
@@ -774,8 +542,8 @@
           <div class="bottom-footer">
             <div class="copyright">
               <p class="text">
-                Copyright&copy;2020 All rights reserved | Made by
-                <span>True Coder</span>
+                Copyright&copy;2020 All rights reserved 
+                <span>Abiodun-bello..........</span>
               </p>
             </div>
 
@@ -787,13 +555,18 @@
                   <a href="#">
                     <i class="fab fa-facebook-f"></i>
                   </a>
-                  <a href="#">
+                  <a href="https://x.com/">
                     <i class="fab fa-twitter"></i>
                   </a>
-                  <a href="#">
-                    <i class="fab fa-instagram"></i>
+                  <a href="https://wa.me/2348032593879">
+                    <i class="fab fa-whatsapp"></i>
                   </a>
-                  <a href="#">
+
+                  <a href="dammy Daniel, [14/10/2023 10:06 pm]
+                  https://www.linkedin.com/in/abiodun-bello?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+                  
+                  dammy Daniel, [14/10/2023 11:42 pm]
+                  https://wa.me/2348032593879">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </div>
